xliff-22/test-suite/core/invalid/bad_IdDuplicationBetweenSegmentAndInline.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.1" srcLang="en">
 <file id="f1">
  <group id="g1">
   <unit id="1">
    <segment id="1">
     <source>
	  <pc id="1">text</pc>
	 </source>
    </segment>
   </unit>
  </group>
 </file>
</xliff>
